cipher types expanded in yml for ci/cd

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -59,6 +59,7 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         username: ${{ secrets.SSH_USERNAME }}
         passphrase: ${{ secrets.SSH_PASSPHRASE }}
+        use_insecure_cipher: true
         script: |
           cd /public_html/digitalhaze/comp426
           git checkout -f
