--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -18,7 +18,7 @@ jobs:
         host: ${{ secrets.SSH_HOST }}
         port: 22
         username: ${{ secrets.SSH_USERNAME }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        password: ${{ secrets.SSH_PASSWORD }}
         script: |
           cd /public_html/digitalhaze/comp426
           git checkout -f
