--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -19,6 +19,7 @@ jobs:
         port: 22
         username: ${{ secrets.SSH_USERNAME }}
         password: ${{ secrets.SSH_PASSWORD }}
+        use_insecure_cipher: true
         script: |
           cd /public_html/digitalhaze/comp426
           git checkout -f
